bug: Add media query for skill icons.

--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -2,6 +2,7 @@
 @import "compass";
 
 $portfolio-hr:  #dddddd;
+$alt-blue:      #196bac;
 /* ==========================================================================
    Media query (Holy Grail Layout):
    ========================================================================== */
@@ -103,10 +104,21 @@ $portfolio-hr:  #dddddd;
 /**************
   Misc queries:
 **************/
-// By making the image a 'block' element, it becomes fluid:
+/* By making the image a 'block' element, it becomes fluid: */
 @media screen and (max-width: 627px) {
   #home .flex-grow {
     margin-top: 2.6rem;
     display:    block;
+  }
+}
+
+/* We 'insert' the icon description when screen is large enough
+   (i.e. we 'remove' the content on small screens) */
+@media screen and (min-width: 400px) {
+  .skill-icons span::before {
+    content:    " " attr(data-skill);
+    font-size:  1.5rem;
+    font-style: normal;
+    color:      $alt-blue;
   }
 }
