--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -1,21 +1,20 @@
-// TODO: replace with compass font-face mixin:
 @font-face {
   font-family: 'OpenSans';
   font-style:   normal;
   font-weight:  400;
-  src:          url('../assets/OpenSans-Regular.ttf');
+  src:          url('../../public/assets/OpenSans-Reg.woff');
 }
 
 @font-face {
   font-family:  'OpenSans';
   font-style:   normal;
   font-weight:  300;
-  src:          url('../assets/OpenSans-Light.ttf');
+  src:          url('../../public/assets/OpenSans-Light.woff');
 }
 
 @font-face {
   font-family:  'OpenSans';
   font-style:   normal;
   font-weight:  600;
-  src:          url('../assets/OpenSans-Bold.ttf');
+  src:          url('../../public/assets/OpenSans-Bold.woff');
 }
