--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -18,6 +18,7 @@ $alt-blue:      #196bac;
   }
 
   /* change flex direction for relevant sections: */
+  nav,
   .portfolio-title,
   .about-li,
   .portfolio-row,
@@ -33,8 +34,8 @@ $alt-blue:      #196bac;
   /**************
     Header section:
   **************/
-  nav > div {
-    @include flex(1 1 auto !important) ;
+  nav {
+    @include flex-wrap(nowrap !important);    /* for IE 'bug' */
   }
 
   /**************
@@ -137,5 +138,13 @@ $alt-blue:      #196bac;
     font-size:  1.5rem;
     font-style: normal;
     color:      $alt-blue;
+  }
+}
+
+// IE on v. small window is buggy:
+// TODO: this in only a quick fix
+@media screen and (max-width: 280px) {
+  header {
+    display: none;
   }
 }
