--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -218,7 +218,8 @@ header {
     }
 
     img {
-      border-radius: 4px;
+      border-radius:  4px;
+      width:          100%;     /* fixes IE image resize 'bug' */
     }
   }
 }
