--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -12,7 +12,6 @@ $alt-blue:      #196bac;
     All sections:
   **************/
   [class^='col-'] {
-    text-align:   center;
     max-width:    100%;
     width:        100%;
   }
@@ -32,18 +31,21 @@ $alt-blue:      #196bac;
   }
 
   /**************
-    Header section:
-  **************/
-
-  /**************
     Home section:
   **************/
   #home {
     height: auto;
     img { width:100%; }   /* IE 'bug': won't resize/respond correctly otherwise */
   }
+
   .home-title {
     margin-top: 4vh;
+  }
+
+  /* By making the image a 'block' element, it becomes fluid: */
+  #home .flex-grow {
+    margin-top: 2.6rem;
+    display:    block;
   }
 
   /**************
@@ -101,24 +103,25 @@ $alt-blue:      #196bac;
       }
     }
   }
+
   /**************
     Footer section:
   **************/
-  footer .col-6 { // i.e. the column w/ icons
-    padding-top: 0.45rem;
+  footer {
+    & [class ^= 'col-'] {
+      text-align: center;
+    }
+
+    // i.e. the column w/ social icons:
+    .social-container {
+      padding-top: 0.45rem;
+    }
   }
 }
 
 /**************
   Misc queries:
 **************/
-/* By making the image a 'block' element, it becomes fluid: */
-@media screen and (max-width: 627px) {
-  #home .flex-grow {
-    margin-top: 2.6rem;
-    display:    block;
-  }
-}
 
 /* We 'insert' the icon description when screen is large enough
    (i.e. we 'remove' the content on small screens) */
@@ -131,10 +134,15 @@ $alt-blue:      #196bac;
   }
 }
 
-// IE on v. small window is buggy:
-// TODO: this in only a quick fix
-@media screen and (max-width: 280px) {
+/*
+  Header section:
+*/
+@media screen and (max-width: 540px) {
   header {
     display: none;
+  }
+  .triple-bar {
+    opacity:    1 !important;
+    visibility: visible !important;
   }
 }
