--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -92,10 +92,12 @@ section {
   right:      0;
   z-index:    99;
   position:   fixed;
-  height:     100vh;
+  height:     100%;
   max-width:  100%;
-  width:      20rem;
+  width:      100%;
+  font-size:  2.4rem;
   text-align: end;
+  background-color: rgba(0, 0, 0, 0);
   .triple-bar {
     padding-right:  2rem;
     opacity:        0;
@@ -108,18 +110,17 @@ section {
   }
   li {
     padding-right:  2rem;
+    padding-top:    0.3rem;
     a {
       color:  $text-gray;
       width:  100%;
-      height: 3.4rem;
     }
   }
 }
-
-
+/* triple bar logo */
 .ion-navicon {
   color:      $text-gray;
-  font-size:  2.6rem;
+  font-size:  3.7rem;
   &::before {;
     margin-top: 0.7rem;
   }
@@ -134,6 +135,14 @@ section {
 .hide-menu {
   opacity:    0;
   visibility: hidden;
+}
+
+.fill-bg {
+  background-color: rgba(250, 250, 250, 1) !important;
+}
+
+.hide-bg {
+  background-color: rgba(0, 0, 0, 0);
 }
 
 /*******************
