--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -461,10 +461,12 @@ section {
   right: 0;
   z-index: 99;
   position: fixed;
-  height: 100vh;
+  height: 100%;
   max-width: 100%;
-  width: 20rem;
+  width: 100%;
+  font-size: 2.4rem;
   text-align: end;
+  background-color: transparent;
 }
 #drop-down-menu .triple-bar {
   padding-right: 2rem;
@@ -481,16 +483,17 @@ section {
 }
 #drop-down-menu li {
   padding-right: 2rem;
+  padding-top: 0.3rem;
 }
 #drop-down-menu li a {
   color: #54585E;
   width: 100%;
-  height: 3.4rem;
 }
 
+/* triple bar logo */
 .ion-navicon {
   color: #54585E;
-  font-size: 2.6rem;
+  font-size: 3.7rem;
 }
 .ion-navicon::before {
   margin-top: 0.7rem;
@@ -505,6 +508,14 @@ section {
 .hide-menu {
   opacity: 0;
   visibility: hidden;
+}
+
+.fill-bg {
+  background-color: #fafafa !important;
+}
+
+.hide-bg {
+  background-color: transparent;
 }
 
 /*******************
