--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -85,9 +85,8 @@ section {
 }
 
 /*******************
- Drop-down menu (responsive nav)
+ Adaptive Menu (drop-down menu)
  *******************/
-
 #drop-down-menu {
   right:      0;
   z-index:    99;
@@ -122,7 +121,8 @@ section {
     }
   }
 }
-/* triple bar logo */
+
+/* triple bar menu logo */
 .ion-navicon {
   color:      $text-gray;
   font-size:  3.7rem;
@@ -131,7 +131,7 @@ section {
   }
 }
 
-/* utility selectors: */
+/* menu utility selectors: */
 .show-menu {
   opacity:    1 !important;
   visibility: visible !important;
