--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -455,7 +455,7 @@ section {
 }
 
 /*******************
- Drop-down menu (responsive nav)
+ Adaptive Menu (drop-down menu)
  *******************/
 #drop-down-menu {
   right: 0;
@@ -498,7 +498,7 @@ section {
   color: #196bac;
 }
 
-/* triple bar logo */
+/* triple bar menu logo */
 .ion-navicon {
   color: #54585E;
   font-size: 3.7rem;
@@ -507,7 +507,7 @@ section {
   margin-top: 0.7rem;
 }
 
-/* utility selectors: */
+/* menu utility selectors: */
 .show-menu {
   opacity: 1 !important;
   visibility: visible !important;
