--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -465,6 +465,7 @@ section {
   max-width: 100%;
   width: 100%;
   font-size: 2.4rem;
+  text-align: right;
   text-align: end;
   background-color: transparent;
   -moz-transition: all 0.3s ease;
@@ -484,6 +485,7 @@ section {
   -o-transition: all 0.3s ease;
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
+  text-align: right;
   text-align: end;
 }
 #drop-down-menu li {
