--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -88,22 +88,19 @@ section {
  Adaptive Menu (drop-down menu)
  *******************/
 #drop-down-menu {
-  background: royalblue;
   right:      0;
   z-index:    99;
   position:   fixed;
   font-size:  2.4rem;
   text-align: right;      // for IE
   text-align: end;
-  background-color: rgba(0, 0, 0, 0);
-  @include          transition($quick-transition);
+  background: rgba(0, 0, 0, 0);
   .triple-bar {
     padding-right:  2rem;
   }
   ul {
     opacity:    1;
     visibility: visible;
-    @include    transition($quick-transition);
     text-align: right;    // for IE
     text-align: end;
   }
@@ -111,6 +108,7 @@ section {
     padding-right:  2rem;
     padding-top:    0.3rem;
     a {
+      @include  transition($quick-transition);
       color:    $text-gray;
       width:    100%;
       &:hover {
@@ -129,28 +127,23 @@ section {
   }
 }
 
-.full-canvas {
+/* overlays entire page with white bg: */
+.entire-page {
+  @include    transition($quick-transition);
+  background: white;
   position:   fixed;
-  opacity:    0;
-  visibility: hidden;
-  z-index:    90;
+  z-index:    88;
+  min-height: 100%;
   height:     100%;
-  max-width:  100%;
+  min-width:  100%;
   width:      100%;
-  background-color: rgba(250, 250, 250, 1);
 }
 
-/* menu utility selectors: */
-.show-menu {
-  opacity:    1 !important;
-  visibility: visible !important;
-}
-
+/* hide utility: */
 .hidden {
   opacity:    0;
   visibility: hidden;
 }
-
 
 /*******************
  Header
