--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -458,18 +458,13 @@ section {
  Adaptive Menu (drop-down menu)
  *******************/
 #drop-down-menu {
-  background: royalblue;
   right: 0;
   z-index: 99;
   position: fixed;
   font-size: 2.4rem;
   text-align: right;
   text-align: end;
-  background-color: transparent;
-  -moz-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
+  background: transparent;
 }
 #drop-down-menu .triple-bar {
   padding-right: 2rem;
@@ -477,10 +472,6 @@ section {
 #drop-down-menu ul {
   opacity: 1;
   visibility: visible;
-  -moz-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
   text-align: right;
   text-align: end;
 }
@@ -489,6 +480,10 @@ section {
   padding-top: 0.3rem;
 }
 #drop-down-menu li a {
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
   color: #54585E;
   width: 100%;
 }
@@ -505,23 +500,22 @@ section {
   margin-top: 0.7rem;
 }
 
-.full-canvas {
+/* overlays entire page with white bg: */
+.entire-page {
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  background: white;
   position: fixed;
-  opacity: 0;
-  visibility: hidden;
-  z-index: 90;
+  z-index: 88;
+  min-height: 100%;
   height: 100%;
-  max-width: 100%;
+  min-width: 100%;
   width: 100%;
-  background-color: #fafafa;
 }
 
-/* menu utility selectors: */
-.show-menu {
-  opacity: 1 !important;
-  visibility: visible !important;
-}
-
+/* hide utility: */
 .hidden {
   opacity: 0;
   visibility: hidden;
