format: Make minor adjustments to tasks and styles.

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -85,7 +85,7 @@ section {
 }
 
 /*******************
- Adaptive Menu (drop-down menu)
+ Hamburger Menu (drop-down menu)
  *******************/
 #drop-down-menu {
   right:      0;
@@ -336,6 +336,10 @@ footer {
   height:         0;
   border-top:     1px #dddddd solid;
   border-bottom:  1px white solid;
+}
+
+.debug {
+  border: 2px dotted red;
 }
 
 /*******************
