--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -554,6 +554,9 @@ i.ion-ios-close-empty {
   color: #aaaaaa;
   font-size: 3rem;
 }
+i.ion-ios-close-empty:hover {
+  cursor: pointer;
+}
 
 .menu-heading {
   color: #aaaaaa;
@@ -608,7 +611,7 @@ header button {
 }
 
 /* hamburger icon: */
-.hamburger-icon a {
+.hamburger-icon {
   font-size: 3rem;
   color: #646464;
   padding: 0 0.8rem;
@@ -618,9 +621,10 @@ header button {
   -webkit-transition: all 0.1s linear;
   transition: all 0.1s linear;
 }
-.hamburger-icon a:hover {
+.hamburger-icon:hover {
   background: #646464;
   color: ghostwhite;
+  cursor: pointer;
 }
 
 /*******************
