--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -180,7 +180,7 @@ header {
 
 /* hamburger icon: */
 .hamburger-icon {
-  //display: none;
+  display:        none;
   font-size:      3rem;
   color:          $gray;
   padding:        0 0.8rem;
